--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/menu/menu.html
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/menu/menu.html
@@ -1,38 +1,38 @@
 <div>
 <ul class="menu">
-	<li class="top"><a href="#" class="top_link"><span>Bogensport</span></a>
+	<li class="top"><a href="default.asp?ArtKatNr=10" class="top_link"><span>Bogensport</span></a>
 			<ul class="sub">
-			<li><a href="#">Anf&auml;nger</a></li>			
-			<li><a href="#">Tipps</a></li>
-            <li><a href="#">Langbogen</a></li>
-            <li><a href="#">Recurve</a></li>
-            <li><a href="#">Reiterbogen</a></li>
-            <li><a href="#">Compound</a></li>
+			<li><a href="default.asp?ArtKatNr=11">Anf&auml;nger</a></li>			
+			<li><a href="default.asp?ArtKatNr=12">Tipps</a></li>
+            <li><a href="default.asp?ArtKatNr=13">Langbogen</a></li>
+            <li><a href="default.asp?ArtKatNr=14">Recurve</a></li>
+            <li><a href="default.asp?ArtKatNr=15">Reiterbogen</a></li>
+            <li><a href="default.asp?ArtKatNr=16">Compound</a></li>
 		</ul>
 	</li>
-	<li class="top"><a href="#" class="top_link"><span>Kurse</span></a>
+	<li class="top"><a href="default.asp?ArtKatNr=20" class="top_link"><span>Kurse</span></a>
 		<ul class="sub">
-			<li><a href="#">Anf&auml;nger</a></li>			
-			<li><a href="#">Gruppen</a></li>
-            <li><a href="#">Betriebsausfl&uuml;ge</a></li>
-            <li><a href="#">Einzeltraining mit dem Staatsmeister</a></li>
+			<li><a href="default.asp?ArtKatNr=21">Anf&auml;nger</a></li>			
+			<li><a href="default.asp?ArtKatNr=22">Gruppen</a></li>
+            <li><a href="default.asp?ArtKatNr=23">Betriebsausfl&uuml;ge</a></li>
+            <li><a href="default.asp?ArtKatNr=24">Einzeltraining mit dem Staatsmeister</a></li>
 		</ul>
 	</li>
-	<li class="top"><a href="#" class="top_link"><span>Gel&auml;nde</span></a>
+	<li class="top"><a href="default.asp?ArtKatNr=30" class="top_link"><span>Gel&auml;nde</span></a>
 		<ul class="sub">
-			<li><a href="#">3D-Trainingsparcours</a></li>			
-            <li><a href="#">Schieﬂhalle</a></li>
-            <li><a href="#">Einschieﬂplatz</a></li>
-            <li><a href="#">Treestands</a></li>
-            <li><a href="#">Blasrohrparcours</a></li>
+			<li><a href="default.asp?ArtKatNr=31">3D-Trainingsparcours</a></li>			
+            <li><a href="default.asp?ArtKatNr=32">Schieﬂhalle</a></li>
+            <li><a href="default.asp?ArtKatNr=33">Einschieﬂplatz</a></li>
+            <li><a href="default.asp?ArtKatNr=34">Treestands</a></li>
+            <li><a href="default.asp?ArtKatNr=35">Blasrohrparcours</a></li>
 		</ul>
 	</li>
-	<li class="top"><a href="#" class="top_link"><span>Shop</span></a></li>
+	<li class="top"><a href="default.asp?ArtKatNr=40" class="top_link"><span>Shop</span></a></li>
 	<li class="top"><a href="default.asp?pageToShow=warenkorbStep1" class="top_link"><span>Warenkorb</span></a></li>
 	<li class="top"><a href="#" class="top_link"><span>Kontakt</span></a>
 	<ul class="sub">
-			<li><a href="#">Kunden Sign-In</a></li>			
-            <li><a href="#">H&auml;ndler Sign-In</a></li>
+			<li><a href="default.asp?pageToShow=MyAccount">Kunden Sign-In</a></li>			
+            <li><a href="default.asp?pageToShow=MyAccount">H&auml;ndler Sign-In</a></li>
 		</ul>
 	</li>
 
