--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/basket/warenkorb_login.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/basket/warenkorb_login.htm
@@ -1,135 +1,118 @@
 <center>
-    <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
-        bordercolor="#111111" width="100%" id="AutoNumber5">
-        <tr>
-            <td width="50%" valign="top">
-                &nbsp;
-            </td>
-            <td width="50%" valign="top">
-                &nbsp;
-            </td>
-        </tr>
-        <tr>
-            <td width="50%" valign="top">
-                &nbsp;
-            </td>
-            <td width="50%" valign="top">
-                &nbsp;
-            </td>
-        </tr>
-        <tr>
-            <td width="50%" rowspan="2" valign="top">
-                <div align="center">
-                    <center>
-                        <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
-                            bordercolor="#111111" width="90%" id="AutoNumber6">
-                            <tr>
-                                <td width="100%" colspan="3">
-                                    <b><font size="1" face="Verdana" color="#DB0F21">&gt; [TRANSLATION:BESTEHENDES KUNDENKONTO]</font></b><br>
-                                    &nbsp;
-                                </td>
-                            </tr>
-                            <tr>
-                                <td width="100%" colspan="3">
-                                    <font face="Verdana,Tahoma,Arial,Helvetica" size="1">Falls Sie sich bereits bei uns
-                                        registriert haben, geben Sie bitte ihre eMail Adresse und Passwort ein:<br>
-                                        <br>
-                                    </font>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td width="100%" colspan="3">
-                                    <div align="center">
-                                        <center>
-                                            <table border="0" cellpadding="2" cellspacing="5" style="border-collapse: collapse"
-                                                bordercolor="#111111" width="81%" id="AutoNumber8" bgcolor="#F7F3F7">
-                                                <tr>
-                                                    <td width="50%">
-                                                        <b><font face="Verdana,Tahoma,Arial,Helvetica" size="1"><font color="#B52C21">*</font>
-                                                            [TRANSLATION:Email]</font></b>
-                                                    </td>
-                                                    <td width="50%">
-                                                        <input type="text" name="EmailOld" size="20" value="[USER_EMAIL]">
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td width="50%">
-                                                        <b><font face="Verdana,Tahoma,Arial,Helvetica" size="1"><font color="#B52C21">*</font>
-                                                            [TRANSLATION:Passwort]</font></b>
-                                                    </td>
-                                                    <td width="50%">
-                                                        <input type="password" name="PasswordOld" size="20" value="[USER_PASSWORD]">
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </center>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td width="100%" colspan="3">
-                                </td>
-                            </tr>
-                        </table>
-                    </center>
-                </div>
-            </td>
-            <td width="50%" valign="top">
-                <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
-                    bordercolor="#111111" width="100%" id="AutoNumber7">
-                    <tr>
-                        <td width="100%">
-                            <b><font size="1" face="Verdana" color="#DB0F21">&gt; [TRANSLATION:NEUES KUNDENKONTO
-                                ANLEGEN]</font></b><br>
-                            &nbsp;
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width="100%">
-                            <div align="left">
-                                <font face="Verdana,Tahoma,Arial,Helvetica" size="1">Sie sind noch kein Kunde bei uns
-                                    oder haben noch nie im Internet bei uns gekauft, dann registrieren Sie sich jetzt.<br>
-                                    &nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
-                                        bordercolor="#111111" width="100%" id="AutoNumber9">
-                                        <tr>
-                                            <td width="100%">
-                                                <p align="center">
-                                                    <font face="Verdana,Tahoma,Arial,Helvetica" size="1">
-                                                        <input type="button" value="Erstellen" onclick="document.location='default.asp?PageToShow=NewAccount'"
-                                                            name="B6"></font><br>
-                                                &nbsp;
-                                            </td>
-                                        </tr>
-                                    </table>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width="100%">
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td width="50%" valign="top">
-                <b><font size="1" face="Verdana" color="#DB0F21">&gt; </font></b><font face="Verdana"
-                    color="#DB0F21" size="1"><b>[TRANSLATION:PASSWORT VERGESSEN]</b></font><font face="Verdana, Tahoma, Arial, Helvetica"
-                        color="black" size="1"><br>
-                        <br>
-                        Falls sich Ihre eMail Adresse geändert hat, informieren Sie uns bitte unter: <a href="mailto:online@arfaian.com?subject=email_changes">
-                            online@arfaian.com</a><br>
-                        <br>
-                        Sollten Sie Ihr Passwort vergessen haben, füllen sie bitte das Formular aus.<br>
-                        &nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
-                            bordercolor="#111111" width="100%" id="AutoNumber10">
-                            <tr>
-                                <td width="100%">
-                                    <p align="center">
-                                        <input type="button" value="Passwort?" onclick="document.location='javascript:PasswordSend();'"
-                                            name="B8">
-
-                                        <script language="JavaScript">
+<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber5">
+	<tr>
+		<td width="50%" valign="top">&nbsp; </td>
+		<td width="50%" valign="top">&nbsp; </td>
+	</tr>
+	<tr>
+		<td width="50%" valign="top">&nbsp; </td>
+		<td width="50%" valign="top">&nbsp; </td>
+	</tr>
+	<tr>
+		<td width="50%" rowspan="5" valign="top" align="left">
+		<div align="left">
+			<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="90%" id="AutoNumber6" class="boxedText">
+				<tr>
+					<th width="100%" colspan="3">&gt; [TRANSLATION:BESTEHENDES KUNDENKONTO]</th>
+				</tr>
+				<tr>
+					<td width="100%" colspan="3">
+					<font face="Verdana,Tahoma,Arial,Helvetica">Falls Sie sich bereits 
+					bei uns registriert haben, geben Sie bitte ihre eMail Adresse 
+					und Passwort ein:<br>
+					<br>
+					</font></td>
+				</tr>
+				<tr>
+					<td width="100%" colspan="3">
+					<div align="center">
+						<center>
+						<table border="0" cellpadding="2" cellspacing="5" style="border-collapse: collapse" bordercolor="#111111" width="81%" id="AutoNumber8" _bgcolor="#F7F3F7">
+							<tr>
+								<td width="50%"><b>
+								<font face="Verdana,Tahoma,Arial,Helvetica">
+								<font color="#B52C21">*</font> [TRANSLATION:Email]</font></b>
+								</td>
+								<td width="50%">
+								<input type="text" name="EmailOld" size="20" value="[USER_EMAIL]">
+								</td>
+							</tr>
+							<tr>
+								<td width="50%"><b>
+								<font face="Verdana,Tahoma,Arial,Helvetica">
+								<font color="#B52C21">*</font> [TRANSLATION:Passwort]</font></b>
+								</td>
+								<td width="50%">
+								<input type="password" name="PasswordOld" size="20" value="[USER_PASSWORD]">
+								</td>
+							</tr>
+						</table>
+						<p><br>
+&nbsp;</p>
+						</center></div>
+					</td>
+				</tr>
+				<tr>
+					<td width="100%" colspan="3"></td>
+				</tr>
+			</table>
+		</div>
+		</td>
+		<td width="50%" valign="top">
+		<table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber7" class="boxedText">
+			<tr>
+				<th width="100%"><b>&gt; [TRANSLATION:NEUES KUNDENKONTO ANLEGEN]</b></th>
+			</tr>
+			<tr>
+				<td width="100%">
+				<div align="left">
+					<font face="Verdana,Tahoma,Arial,Helvetica">Sie sind noch kein 
+					Kunde bei uns oder haben noch nie im Internet bei uns gekauft, 
+					dann registrieren Sie sich jetzt.<br>
+&nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber9">
+						<tr>
+							<td width="100%">
+							<p align="center">
+							<font face="Verdana,Tahoma,Arial,Helvetica" size="1">
+							<input type="button" class="button" value="Erstellen" onclick="document.location='default.asp?PageToShow=NewAccount'" name="B6"></font><br>
+&nbsp; </p>
+							</td>
+						</tr>
+					</table>
+				</div>
+				</td>
+			</tr>
+			<tr>
+				<td width="100%"></td>
+			</tr>
+		</table>
+		</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;&nbsp;&nbsp; </td>
+	</tr>
+	<tr>
+		<th width="50%" valign="top" class="boxedText"><b><font face="Verdana">&gt;
+		</font></b><font face="Verdana"><b>[TRANSLATION:PASSWORT VERGESSEN]</b></font></th>
+	</tr>
+	<tr>
+		<td width="50%" valign="top" class="boxedText">
+		<font face="Verdana, Tahoma, Arial, Helvetica" color="black"><br>
+		<br>
+		Falls sich Ihre eMail Adresse geändert hat, informieren Sie uns bitte unter:
+		<a href="mailto:online@arfaian.com?subject=email_changes">online@arfaian.com</a><br>
+		<br>
+		Sollten Sie Ihr Passwort vergessen haben, füllen sie bitte das Formular 
+		aus.<br>
+&nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber10">
+			<tr>
+				<td width="100%">
+				<p align="center">
+				<input type="button" class="button" value="Passwort?" onclick="document.location='javascript:PasswordSend();'" name="B8">
+				<script language="JavaScript">
 function PasswordSend() {
 		var a = window.open ("forgotten",null, "height=400,width=400,status=yes,toolbar=no,menubar=no,location=no");
 		a.document.write ("<HTML><link REL='stylesheet' HREF='./style.css' TYPE='text/css'><BODY bgcolor=#FFFFFF>\n");
@@ -160,15 +143,16 @@ function PasswordSend() {
 		a.document.write ("</BODY></HTML>\n");
 }
                                         </script>
-                                </td>
-                            </tr>
-                        </table>
-                <p>
-            </td>
-        </tr>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
-        bordercolor="#111111" width="50%" id="AutoNumber12">
-        <tr>
-        </tr>
-    </table>
+				</p>
+				</td>
+			</tr>
+		</table>
+		<p></p>
+		</td>
+	</tr>
+</table>
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="50%" id="AutoNumber12">
+	<tr>
+	</tr>
+</table>
+</center>
