--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/newsletterForm.htm
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/newsletterForm.htm
@@ -1,20 +1,20 @@
 <form method="POST" action="cgi/calls/registerNewsletterNew.asp?pageToShow=Newsletter" id="form1" name="form1" target="Newsletter">
-	<table border="1" cellpadding="2" cellspacing="1" width="2%">
+	<table border="1" cellpadding="2" cellspacing="1" class="boxedText" width="98%" >
 		<tr>
 			<td width="100%" colspan="3" style="border-style: none; border-width: medium" align="center">
-			<table border="0" width="73" cellspacing="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" bgcolor="#FFFFFF">
+			<table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111">
 				<tr>
-					<td width="200" align="right" border="0">
+					<th width="100%" align="right" border="0">
 					<p align="left">Newsletter*:
 					<select name="Interest" size="1">
 					<option selected="true">Produkt [Bezeichnung]</option>
 					<option>neue Produkte</option>
 					<option>günstige Angebote</option>
-					</select> </p>
+					</select></th></tr><tr><td>					&nbsp;</p>
 					</td>
 				</tr>
 				<tr>
-					<td width="200" align="right" border="0">
+					<td width="100%" align="right" border="0">
 					<p align="left">Ihr Email*:<input name="EmailForNewsletter" size="20" value="[USER_EMAIL]">
 					</p>
 					</td>
@@ -22,7 +22,7 @@
 				<tr>
 					<td colspan="2" border="0" width="125">
 					<p align="center">
-					<input onclick="window.open('Newsletter','Newsletter','top=300,left=300,height=300,width=400,status=yes,toolbar=no,menubar=no,location=no');" type="submit" value="Registrieren" name="Go">
+					<input class="button" onclick="window.open('Newsletter','Newsletter','top=300,left=300,height=300,width=400,status=yes,toolbar=no,menubar=no,location=no');" type="submit" value="Registrieren" name="Go">
 					</p>
 					<p align="center">
 					<a href="cgi/calls/unregisterNewsletter.asp" target="Unregister" onclick="window.open('Unregister','Unregister','top=300,left=300,height=200,width=250,status=yes,toolbar=no,menubar=no,location=no');">
