--- a/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_kategorie_default.html
+++ b/trunk/IntraSell_WebShop/skins/skin_nca/pages/template_kategorie_default.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml2/DTD/xhtml1-strict.dtd">	
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml2/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
 <title>[SHOP_TITLE]</title>
- 
-	<link rel="stylesheet" href="skins/skin_nca/pages/menu/menu_style.css" type="text/css" />
-	<link rel="stylesheet" href="../pages/style.css" type="text/css" />
-	<link rel="stylesheet" href="skins/skin_nca/pages/style.css" type="text/css" />
-	 
+<link rel="stylesheet" href="skins/skin_nca/pages/menu/menu_style.css" type="text/css" />
+<link rel="stylesheet" href="../pages/style.css" type="text/css" />
+<link rel="stylesheet" href="skins/skin_nca/pages/style.css" type="text/css" />
 <script language="JavaScript">
 <!--        HIDE
         function pageLoadSetHeaderImages(catPath) {
@@ -34,17 +33,17 @@
 			<td colspan="3" width="1280" height="235" bgcolor="000000" valign="top" style="background-image: url('../images/main/Header.gif'); background-repeat: no-repeat">
 			<table border="0" cellpadding="0" cellspacing="0" width="96%" height="234">
 				<tr>
-					<td width="4%" height="90">&nbsp;</td>
-					<td width="23%" height="90">
+					<td width="4%" height="97">&nbsp;</td>
+					<td width="23%" height="97">
 					<img src="../images/main/spacer.gif" width="270" height="10"></td>
-					<td height="90" width="33%">
+					<td height="97" width="33%">
 					<p align="center">[CURRENT_USER] </p>
 					</td>
-					<td width="26%" height="90" align="center">&nbsp;
+					<td width="26%" height="97" align="center">
 					<div id="Language">
 						[LANGUAGE_SELECTION] [LAND_SELECTION] </div>
 					</td>
-					<td width="14%" height="90">&nbsp;
+					<td width="14%" height="97">&nbsp;
 					<!-- 
 					<div>
 						<p align="center">
@@ -55,11 +54,16 @@
 					--></td>
 				</tr>
 				<tr>
-					<td width="4%" height="56">&nbsp;</td>
-					<td width="23%" height="56">
-					 
-					</td>
-					<td height="56" colspan="3" width="73%">[EMBED:menu/menu.html]</td>
+					<td width="4%" height="49">&nbsp;</td>
+					<td width="23%" height="49"></td>
+					<td height="49" colspan="3" width="73%" valign="baseline">
+					<table border="0" width="100%" cellspacing="0" cellpadding="0">
+												<tr>
+													<td>&nbsp;</td>
+													<td width="840">&nbsp;[EMBED:menu/menu.html]</td>
+												</tr>
+												</table>
+					 </td>
 				</tr>
 				<tr>
 					<td width="4%">&nbsp;</td>
@@ -92,18 +96,18 @@
 				</tr>
 				<tr>
 					<td height="515" colspan="2" bgcolor="#FFFFFF" valign="top" style="background-image: url('../images/main/grannen.gif'); background-repeat: no-repeat; background-position-y: top">
-					<div align="center" style="background-image: url('../productImages/category_name_[CATEGORYNR].gif'); background-repeat: no-repeat; background-position: center">  
-						<br><br><!--<img src="../productImages/category_name_[CATEGORYNR].jpg" alt="Kategorie [CATEGORYNR]" width="183" height="32" align="middle"> 
-						--></div>
-					<div style="padding:5px;">
+					<div align="center" style="background-image: url('../productImages/category_name_[CATEGORYNR].gif'); background-repeat: no-repeat; background-position: center">
+					 <img src="../productImages/category_name_[CATEGORYNR].jpg" alt="Kategorie [CATEGORYNR]" width="183" height="32" align="middle"> 
+						<br>
+						<br>
 						
+						 </div>
+					<div style="padding:5px;">
 						<br />
 						<br />
 						<br />
-						[CATEGORY_SUBLIST] <hr>[SIMPLE_SEARCH_FORM] 
-						<hr>[BASKET_STATE] <hr>
-						[NEWSLETTER]
-						</div>
+						[CATEGORY_SUBLIST] <hr>[BASKET_STATE] <hr>[NEWSLETTER]
+					</div>
 					</td>
 					<td width="898" colspan="2" bgcolor="#C60C30" valign="top" background="../images/logo/steinbock.gif" height="100%">
 					<div style="padding: 5px">
@@ -126,9 +130,8 @@
 			<td bgcolor="#000000">&nbsp;</td>
 			<td>
 			<p align="right">
-			<span style="color: #FFFFFF; font-family:Tahoma; font-size:10px">
-			Copyright 2001-2009 GRITON.EU, All rights reserved , Shop Created 
-			with intrasell;
+			<span style="color: #FFFFFF; font-family:Tahoma; font-size:10px">Copyright 
+			2001-2009 GRITON.EU, All rights reserved , Shop Created with intrasell;
 			<br />
 			Optimized for Microsoft Internet Explorer and Mozilla; </span></p>
 			</td>
